@@ -1,9 +1,17 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.566 2006/01/06 16:46:16 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.567 2006/01/07 17:12:00 agaffney Exp $
 
 *GLI-0.3 (27 Oct 2005)
+
+  7 Jan 2006; Andrew Gaffney <agaffney@gentoo.org>
+  src/GLIPortage.py:
+  show 'Calculating dependencies for ...' in subprogress bar at beginning of
+  emerge()
+  src/GLIArchitectureTemplate.py:
+  copy /etc/X11/gdm/gdm.conf.old into chroot if /etc/X11/gdm/gdm.conf exists
+  in the chroot
 
   6 Jan 2006; Andrew Gaffney <agaffney@gentoo.org>
   src/GLIUtility.py:
